Fixed : 'layout issue

--- a/src/main/resources/static/css/preview.css
+++ b/src/main/resources/static/css/preview.css
@@ -403,3 +403,20 @@ body{
     transform:scale(0.82);
     transform-origin:top center;
 }
+#biodata-preview .absolute.inset-0{
+    height:100% !important;
+    overflow:hidden !important;
+}
+#biodata-preview .absolute.inset-0{
+    display:flex;
+    flex-direction:column;
+    justify-content:flex-start;
+}
+
+#biodata-preview section{
+    flex-shrink:1;
+}
+#biodata-preview .col-span-7{
+    word-break:break-word;
+    overflow-wrap:break-word;
+}
